@@ -1,3 +1,8 @@
+2004-11-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* vtysh.c: (vtysh_client_execute) Fix flaws in detecting trailing
+	  '\0' chars and command return code.
+
 2004-10-28 Hasso Tepper <hasso at quagga.net>
 
 	* vtysh.c: "show running-daemons" broke users habits who are using
